# Robot_URDF

./: CMakeLists.txt  package.xml
config/: joint_names_Robot_URDF.yaml
launch/: Control.launch  display.launch  gazebo.launch
meshes/: CasterWheel_Link.STL  Cover_Link.STL  FrontUltra_Link.STL  LeftUltra_Link.STL  LeftWheel_Link.STL  Lidar_Link.STL  RightUltra_Link.STL  RightWheel_Link.STL  base_link.STL
src/: control_robot.cpp
urdf/: Robot_URDF.csv  Robot_URDF.xacro  materials.xacro  mybot.gazebo  sub.cpp
world/my_first_world/: model.config  model.sdf
